fixed spacing between divs and elements

--- a/Client/Assets/forumstyles.css
+++ b/Client/Assets/forumstyles.css
@@ -82,20 +82,22 @@ canvas {
 .sidebar-container {
     display: flex;
     height: 100vh;
-    max-width: 1300px;
     margin-left: auto;
     margin-right: auto;
+    align-content: center;
+    align-items: center;
     padding: 0 10px;
-
+    overflow: hidden;
+    flex: 0.2;
+    border-right: 1px solid var(--icon-color);
 }
 
 .sidebar {
-    border-right: 1px solid var(--icon-color);
-    flex: 0.2;
-    min-width: 250px;
-    /* margin-top: 20px; */
     padding-left: 20px;
     padding-right: 20px;
+    align-content: center;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 /* Feed */
@@ -103,12 +105,14 @@ canvas {
 .feed-container {
     display: flex;
     height: 100vh;
+    overflow: hidden;
+    flex: 0.5;
+    justify-content: center;
+    border-right: 1px solid var(--icon-color);
 }
 
 .feed {
-    flex: 0.5;
-    border-right: 1px solid var(--icon-color);
-    min-width: fit-content;
+    width: 100%;
     overflow-y: scroll;
 }
 
@@ -117,12 +121,14 @@ canvas {
     top: 0;
     background-color: rgba(0, 0, 0, 0.6);
     padding: 15px 20px;
-    color: rgb(155, 255, 210);
+    border: 1px solid var(--icon-color);
+    width: 100%;
 }
 
 .feed__header h2 {
     font-size: 20px;
     font-weight: 800;
+    color: rgb(155, 255, 210);
 }
 
 .feed::-webkit-scrollbar {
@@ -132,4 +138,28 @@ canvas {
 .feed {
     -ms-overflow-style: none;
     scrollbar-width: none;
+}
+
+/* Comment Box */
+
+.commentBox__input img {
+    border-radius: 50%;
+    height: 40px;
+}
+
+.commentBox {
+    padding-bottom: 10px;
+    border-bottom: 8px solid var(--icon-color);
+    padding-right: 10px
+}
+
+.commentBox form {
+    display: flex;
+    flex-direction: column;
+}
+
+/* Widgets */
+
+.widget-container {
+    flex: 0.3;
 }
